--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Cyril Costes">
 
     <!-- Favicons -->
-    <link href="assets/favicon.ico" type="image/x-icon" rel="icon">
+    <link href="_assets/favicon.ico" type="image/x-icon" rel="icon">
 
      <title>AD-Mtrl</title>
 
